new proj/src/objects/GE_ES_Submission_Item_Proxy__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Risk_Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Checklist Item</label>
        <referenceTo>GE_ES_Risk_Checklist_Item__c</referenceTo>
        <relationshipLabel>Submission Item Proxies</relationshipLabel>
        <relationshipName>Riskchecklist_Submitted_For_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Submission_Proxy__c</fullName>
        <label>Submission Proxy</label>
        <referenceTo>GE_ES_Submission_Proxy__c</referenceTo>
        <relationshipLabel>Submission Item Proxies</relationshipLabel>
        <relationshipName>Submission_Item_Proxies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Submission Item Proxy</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Submission Item Proxy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Item Proxies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>